...
        navigationController?.navigationBar.isHidden = true
        
        let widthBtn = screenWidth * 0.4
        let heightBtn = widthBtn * 0.3
        //        var btnSession = UIButton.init(frame: CGRect(x: screenWidth / 2 - (widthBtn / 2), y: screenHeight / 2 - (heightBtn / 2), width: widthBtn, height: heightBtn))
        let btnSession = UIButton(type: .system)
        btnSession.setTitle("Generate Session", for: .normal)
        btnSession.setTitleColor(.white, for: .normal)
//        btnSession.setTitleColor(.gray, for: .highlighted)
        btnSession.titleLabel?.adjustsFontSizeToFitWidth = true
        btnSession.titleLabel?.textColor = .white
        btnSession.setTitleColor(UIColor.init(white: 1, alpha: 0.3), for: .highlighted)
        btnSession.backgroundColor = .red
...
