...
        let cell = tableView.dequeueReusableCell(withIdentifier: MovieGenreTableViewCell.id, for: indexPath) as! MovieGenreTableViewCell
        
        cell.labelTitle.text = arrResponse[indexPath.row].movieTitle ?? "-"
        if let release = arrResponse[indexPath.row].movieReleaseDate{
            cell.labelDesc.text = "Release Date : " + release
        }else{
            cell.labelDesc.text = "Release Date : -"
        }
        
        if let url = arrResponse[indexPath.row].imageURL{
            downloadImage(url_image + url) { image in
                if let image = image {
                    DispatchQueue.main.async {
...
